Relocate and upload example